// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Sidebar.tsx should render itself & its children (logged in) 1`] = `
<div
  className="sc-bdVaJa VpBUF"
>
  <div
    className="sc-bwzfXH hudJrY"
  >
    <svg
      className="logo"
      onClick={[Function]}
      role="logo"
      viewBox="0 0 180.31 182.52"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <linearGradient
          gradientUnits="userSpaceOnUse"
          id="linear-white-gradient"
          x1="300.53"
          x2="130.22"
          y1="294.89"
          y2="240.53"
        >
          <stop
            offset="0"
            stopColor="#CCCCCC"
          />
          <stop
            offset="1"
            stopColor="#FFFFFF"
          />
        </linearGradient>
        <linearGradient
          id="linear-white-gradient-2"
          x1="315.88"
          x2="216.87"
          xlinkHref="#linear-white-gradient"
          y1="246.16"
          y2="214.57"
        />
        <linearGradient
          id="linear-white-gradient-3"
          x1="264.39"
          x2="147.04"
          xlinkHref="#linear-white-gradient"
          y1="211.56"
          y2="174.1"
        />
      </defs>
      <path
        d="M178.67,226.51a47.7,47.7,0,0,0,89.93,21.91h46.56a91.61,91.61,0,0,1-88.82,69.35c-50.45,0-91.49-40.94-91.49-91.26C145,186.6,171,205,178.67,226.51Z"
        style={
          Object {
            "fill": "url(#linear-white-gradient)",
          }
        }
        transform="translate(-134.85 -135.25)"
      />
      <path
        d="M214.16,226.51a21.91,21.91,0,0,1,21.91-21.91h38.57a12.08,12.08,0,0,1,8.3,4l32.21,39.86H236.07A21.91,21.91,0,0,1,214.16,226.51Z"
        style={
          Object {
            "fill": "url(#linear-white-gradient-2)",
          }
        }
        transform="translate(-134.85 -135.25)"
      />
      <path
        d="M258.74,179.07H226.34a47.61,47.61,0,0,0-47.66,47.44c-11.27,24.3-30.12,41.63-43.83,0,0-50.32,41-91.26,91.49-91.26h32.41a21.91,21.91,0,0,1,0,43.83Z"
        style={
          Object {
            "fill": "url(#linear-white-gradient-3)",
          }
        }
        transform="translate(-134.85 -135.25)"
      />
    </svg>
    <div
      className="sc-htpNat cKBiPV"
    >
      4 Unread
    </div>
    <div
      className="sc-bxivhb gbbeNv"
    >
      <div
        onClick={[Function]}
        title="Refresh"
      >
        <svg
          aria-hidden="true"
          className="sc-ifAKCX bkDHmA"
          height={18}
          role="img"
          style={
            Object {
              "display": "inline-block",
              "fill": "currentColor",
              "userSelect": "none",
              "verticalAlign": "text-bottom",
            }
          }
          viewBox="0 0 12 16"
          width={13.5}
        >
          <path
            d="M10.24 7.4a4.15 4.15 0 01-1.2 3.6 4.346 4.346 0 01-5.41.54L4.8 10.4.5 9.8l.6 4.2 1.31-1.26c2.36 1.74 5.7 1.57 7.84-.54a5.876 5.876 0 001.74-4.46l-1.75-.34zM2.96 5a4.346 4.346 0 015.41-.54L7.2 5.6l4.3.6-.6-4.2-1.31 1.26c-2.36-1.74-5.7-1.57-7.85.54C.5 5.03-.06 6.65.01 8.26l1.75.35A4.17 4.17 0 012.96 5z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <a
        href="/settings"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="sc-ifAKCX bkDHmA"
          height={18}
          role="img"
          style={
            Object {
              "display": "inline-block",
              "fill": "currentColor",
              "userSelect": "none",
              "verticalAlign": "text-bottom",
            }
          }
          viewBox="0 0 14 16"
          width={15.75}
        >
          <path
            d="M14 8.77v-1.6l-1.94-.64-.45-1.09.88-1.84-1.13-1.13-1.81.91-1.09-.45-.69-1.92h-1.6l-.63 1.94-1.11.45-1.84-.88-1.13 1.13.91 1.81-.45 1.09L0 7.23v1.59l1.94.64.45 1.09-.88 1.84 1.13 1.13 1.81-.91 1.09.45.69 1.92h1.59l.63-1.94 1.11-.45 1.84.88 1.13-1.13-.92-1.81.47-1.09L14 8.75v.02zM7 11c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
            fillRule="evenodd"
          />
        </svg>
      </a>
    </div>
    <div
      className="badge-account false"
      title="github.com"
    >
      <div
        className="mr-auto name"
      >
        GitHub
      </div>
      <div>
        2
      </div>
    </div>
    <div
      className="badge-account last"
      title="github.gitify.io"
    >
      <div
        className="mr-auto name"
      >
        gitify
      </div>
      <div>
        2
      </div>
    </div>
  </div>
  <div
    className="sc-EHOje kvIlCf"
  >
    <button
      aria-label="Login with GitHub Enterprise"
      className="sc-bZQynM eNBUPr"
      onClick={[Function]}
    >
      Add Enterprise
    </button>
    <button
      aria-label="Star on GitHub"
      className="sc-bZQynM eNBUPr"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="octicon"
        height={12}
        role="img"
        style={
          Object {
            "display": "inline-block",
            "fill": "currentColor",
            "userSelect": "none",
            "verticalAlign": "text-bottom",
          }
        }
        viewBox="0 0 16 16"
        width={12}
      >
        <path
          d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"
          fillRule="evenodd"
        />
      </svg>
       Star
    </button>
  </div>
</div>
`;

exports[`components/Sidebar.tsx should render itself & its children (logged out) 1`] = `
<div
  className="sc-bdVaJa VpBUF"
>
  <div
    className="sc-bwzfXH hudJrY"
  >
    <svg
      className="logo"
      onClick={[Function]}
      role="logo"
      viewBox="0 0 180.31 182.52"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <linearGradient
          gradientUnits="userSpaceOnUse"
          id="linear-white-gradient"
          x1="300.53"
          x2="130.22"
          y1="294.89"
          y2="240.53"
        >
          <stop
            offset="0"
            stopColor="#CCCCCC"
          />
          <stop
            offset="1"
            stopColor="#FFFFFF"
          />
        </linearGradient>
        <linearGradient
          id="linear-white-gradient-2"
          x1="315.88"
          x2="216.87"
          xlinkHref="#linear-white-gradient"
          y1="246.16"
          y2="214.57"
        />
        <linearGradient
          id="linear-white-gradient-3"
          x1="264.39"
          x2="147.04"
          xlinkHref="#linear-white-gradient"
          y1="211.56"
          y2="174.1"
        />
      </defs>
      <path
        d="M178.67,226.51a47.7,47.7,0,0,0,89.93,21.91h46.56a91.61,91.61,0,0,1-88.82,69.35c-50.45,0-91.49-40.94-91.49-91.26C145,186.6,171,205,178.67,226.51Z"
        style={
          Object {
            "fill": "url(#linear-white-gradient)",
          }
        }
        transform="translate(-134.85 -135.25)"
      />
      <path
        d="M214.16,226.51a21.91,21.91,0,0,1,21.91-21.91h38.57a12.08,12.08,0,0,1,8.3,4l32.21,39.86H236.07A21.91,21.91,0,0,1,214.16,226.51Z"
        style={
          Object {
            "fill": "url(#linear-white-gradient-2)",
          }
        }
        transform="translate(-134.85 -135.25)"
      />
      <path
        d="M258.74,179.07H226.34a47.61,47.61,0,0,0-47.66,47.44c-11.27,24.3-30.12,41.63-43.83,0,0-50.32,41-91.26,91.49-91.26h32.41a21.91,21.91,0,0,1,0,43.83Z"
        style={
          Object {
            "fill": "url(#linear-white-gradient-3)",
          }
        }
        transform="translate(-134.85 -135.25)"
      />
    </svg>
  </div>
  <div
    className="sc-EHOje kvIlCf"
  >
    <button
      aria-label="Star on GitHub"
      className="sc-bZQynM eNBUPr"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="octicon"
        height={12}
        role="img"
        style={
          Object {
            "display": "inline-block",
            "fill": "currentColor",
            "userSelect": "none",
            "verticalAlign": "text-bottom",
          }
        }
        viewBox="0 0 16 16"
        width={12}
      >
        <path
          d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"
          fillRule="evenodd"
        />
      </svg>
       Star
    </button>
  </div>
</div>
`;
